# etl-compose

./: README.md  pyproject.toml
elt/: main.py
elt/azure_integration/: adls_service.py
elt/database/: sql_server_service.py
examples/: elt_mongodb_n_collections.py  elt_sql_1_tabela.py  elt_sql_n_tabelas.py
iac/adls/: main.tf  variables.tf
test/: test_connection_adls.py  test_connection_mongodb.py  test_connection_sqlserver.py
